--- a/.github/workflows/publish-newsletter.yml
+++ b/.github/workflows/publish-newsletter.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 14 * * 0'
   workflow_dispatch:  # Allows manual triggering for testing
 
+permissions:
+  contents: write  # Required to commit and push changes
+
 jobs:
   publish:
     runs-on: ubuntu-latest
